public/stylesheet.css
/* GLOBAL */

html {
    background: #f3f3f3;
    transition: background 1s;
}

body {
    margin: 0;
    padding: 0;

    display: flex;
    flex-direction: column;

    font-family: 'Montserrat', sans-serif;
    font-weight: 400;
}


h1, h2 {
    margin: 0;
}


a, a:visited {
    color: #2b9cce;
    text-decoration: none;
    font-weight: 600;
}

a:hover, a:focus {
    text-decoration: none;
    color: #FF8700;
    cursor: pointer;
}

/* dark mode */


/* dark-mode toggle */ 

#dark-mode-toggle {
    position: fixed;
    top: 3vh;
    right: 3vh;
    font-size: 2.5rem;
    color: #3e3e3e;
    border: 1px solid gray;
    border-radius: 100%;
    width: 4rem;
    height: 4rem;

    background: rgba(10,10,10,0.1);

    display: flex;
    align-items: center;
    justify-content: center;

    animation-name: blink;
    animation-duration: 6s;
    animation-iteration-count: infinite;
}

.dark-mode #dark-mode-toggle {
    color: #bdd2e0;
    border: 1px solid #bdd2e0;
    animation-name: unset;
}

#dark-mode-toggle:hover {
    cursor: pointer;
    color: #2b9cce;
    border: 1px solid #2b9cce;
    animation-name: unset;
}

@keyframes blink {
    0%   {color: #3e3e3e;}
    25%  {color: #2b9cce;}
    75%  {color: #2b9cce;}
    75%  {color: #3e3e3e;}
}

/* dark-mode sections and elements */

.dark-mode #attention-grabber {
    background: #2b9cce;
    animation-name: unset;
}

.dark-mode #projects-section {
    background: #1c2b46;
    color: #bdd2e0;
    transition: background 1s, color 1s;
}

.dark-mode .project-tags .project-tag {
    background: #1c2b46;
    color: #a4c5da;
    transition: background 1s, color 1s;
}

.dark-mode .one-project {
    box-shadow: 0px 5px 4px #0b182f;
    color: #a4c5da;
    background: #2b3c58;
    transition: background 1s, color 1s, box-shadow 1s;
}

.dark-mode .section-title {
    background: #43567d;
    color: #a4c5da;
    transition: color 1s, background 1s;
}

.dark-mode #intro-section {
    background: #1c2b46;
    color: #bdd2e0;
    transition: background 1s, color 1s;
}

.dark-mode .one-link i {
    color: #bdd2e0;
    transition: color 1s;
}

.dark-mode .one-link i {
    color: #bdd2e0;
    transition: color 1s;
}

.dark-mode .one-link:hover {
    color: #2b9cce;
}

.dark-mode .one-link:hover>a, .dark-mode .one-link:hover>i,  .dark-mode .one-link:hover>.link-label {
    color: #2b9cce;
    transition: color 0s;
}

.dark-mode .one-link:hover>a>i,  .dark-mode .one-link:hover>a>.link-label {
    color: #2b9cce;
    transition: color 0s;
}

.dark-mode .link-label {
    color: #bdd2e0;
    transition: color 1s;
}

.dark-mode #contact-section p {
    color: #bdd2e0;
    transition: color 1s;
}

.dark-mode #contact-section {
    background: #1c2b46;
    color: #bdd2e0;
    transition: background 1s, color 1s;
}


/* SECTION DEFINITIONS */

.page-section {
    display: flex;
}

.section-wrapper {
    display: flex;
    padding: 10px;              /* just a little padding */
    flex-direction: column;
    width: 100%;
    max-width: 800px;
    box-sizing: border-box;
}

.section-title {
    background: #ffa331;
    color: #000000;
    transform: skew(-20deg);
    padding: 0.5rem 2rem;
    margin-bottom: 2rem;
    width: 25%;
    text-align: center;

    transition: color 1s, background 1s;
}

.section-title h2 {
    transform: skew(20deg);  
    font-family: "Vollkorn", serif;
    font-size: 3.5rem;
    font-weight: 400;
}


/* toggled */

.intro-on-toggle #name-heading {
    font-size: 3rem;
    transition: font-size 0.5s;
}

.intro-on-toggle #name-subheading {
    font-size: 1.5rem;
    transition: font-size 0.5s;
}

.intro-on-toggle .section-wrapper {
    padding-top: 5px;
}


/* INDIVIDUAL SECTIONS */



/* intro page */


#intro-section {
    min-height: 100vh;
    justify-content: center;
    background: #f3f3f3;
    color: #3e3e3e;

    transition: color 1s, background 1s;
}


#intro-section .section-wrapper {
    text-align: center;
    padding: 0;
}

#projects-section .section-wrapper {
    max-width: 1000px
}


.name-heading-wrapper {
    padding-top: 25vh;
    transition: padding-top 0.5s;
}

#name-heading {
    font-size: 5rem;
    font-family: 'Vollkorn', serif;
    font-weight: 400;
    transition: font-size 0.5s
}

#name-subheading {
    font-size: 2rem;
    font-weight: 300;
    transition: font-size 0.5s
}

.about-me {
    visibility: hidden;
    line-height: 1.4;
    text-align: justify;
    width: 80%;
    margin: auto;
    padding-top: 5vh;
    opacity: 0;
    height: 0;
    font-size: 0.5rem;
    transition: font-size 0.5s, height 0.5s, opacity 0.5s;
}



/* contact page */

#contact-section {
    flex-direction: column;
    min-height: 100vh;
    align-items: center;
    background: #f3f3f3;
    padding-bottom: 5vh;
    box-sizing: border-box;
    color: #3e3e3e;

    transition: background 1s;
}

#contact-section .section-wrapper {
    align-items: center;
    justify-content: center;
    flex-grow: 1;
}

#contact-section img {
    width: 30vw;
    border-radius: 100%;
    max-width: 200px;
    margin-top: 3rem;
}

#contact-info {
    line-height: 1.8;
    text-align: center;
    max-width: 600px;
    padding: 3rem 0;
    font-size: 1.5rem;
}

/* projects page */

#projects-section {
    flex-direction: column;
    min-height: 100vh;
    align-items: center;
    justify-content: center;
    background: #f3f3f3;
    padding-bottom: 5vh;

    transition: background 1s;
}



/* single project */

.one-project {
    display: flex;
    flex-direction: row-reverse;
    border-radius: 5px;
    min-width: 300px;
    margin: 1rem;
    background: white;
    box-shadow: 0 5px 10px #a2a2a2;

    transition: color 1s, box-shadow 1s, background 1s;
}

.project-links a, .project-links a:visited {
    color: #2b9cce;
    text-decoration: none;
    padding: 5px 12px;
    border: 1px solid #2b9cce;
    border-radius: 5px;
    margin-right: 0.5rem;
}

.project-links a:hover {
    color: white;
    background: #2b9cce;
}

.project-body {
    width: 70%;
    display: flex;
    flex-direction: column;
    padding: 1.3rem;    
}

.project-body div {
    margin: 0.5rem 0px;
}

.project-body .project-name {
    font-size: 2rem;
    margin-bottom: 0.5rem;
}

.project-body .project-tags {
    flex-wrap: wrap;
    display: flex;
}

.project-body .project-tag {
    padding: 3px 10px;
    margin: 0 0.5rem 0.5rem 0;
    font-size: 0.8rem;
    font-weight: 600;
    text-align: center;
    background: #d0cccc;
    border-radius: 5px;
    color: #404040;

    transition: color 1s, background 1s;
}

.project-body .project-tag:hover{
    cursor: pointer;
}

.project-body .project-description {
    line-height: 1.4;
}

.project-pic {
    width: 50%; 
    border-radius: 0 5px 5px 0;
}

.project-pic div {
    height: 100%;
}

.project-links {
    font-weight: 600;
}


/* nav links */

.links {
    display: flex;
    justify-content: space-between;
    padding-bottom: 10vh;             /* This is not great */
    margin-top:auto;
}

.one-link, .one-link a  {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    color: #3e3e3e;
    font-weight: 400;

    /*transition: color 1s;*/
}

.one-link i {
    font-size: 2rem;
    /*transition: color 1s;*/
}

.one-link:hover {
    color: #2b9cce;
    cursor: pointer;
    text-shadow: 0 0.3rem 15px rgba(15, 61, 84, 0.5);
    transform: translateY(-0.3rem);
    transition: transform 0.1s, color 0s;
}

.one-link:hover>a {
    color: #2b9cce;
}


.one-link .link-label {
    padding-top: 1rem;
/*    transition: color 1s;*/
}


.selected-link {
    color: #2b9cce;
}

.selected-link:hover {
/*    color: #f3f3f3;
    background: #696868;
    border: 1px solid gray;*/
}


/* turned on*/

.about-switched-on .name-heading-wrapper #name-heading {
    font-size: 3.5rem;
    transition: font-size 0.5s;
}

.about-switched-on .name-heading-wrapper #name-subheading {
    font-size: 1.5rem;
    transition: font-size 0.5s;
}

.about-switched-on .name-heading-wrapper{
    padding-top: 5vh;
    transition: padding-top 0.5s;
}

.about-switched-on .about-me {
    visibility: visible;
    opacity: 1;
    height: auto;
    font-size: 1.1rem;
    transition: font-size 0.5s, height 1s, opacity 1s;
}


/* MOBILE STYLING */

@media handheld, screen and (max-width: 700px) {




    /* SECTION DEFINITIONS */



    /* INDIVIDUAL SECTIONS */



    /* intro page */

    #name-heading {
        font-size: 2.2rem;
    }

    #name-subheading {
        font-size: 1.3rem;
    }

    /* projects page */

    /* single project */

    .one-project {
        flex-direction: column;
    }

    .project-pic {
        width: 100%;
        height: 30vh;
        border-radius: 5px 5px 0 0;
    }

    .project-body {
        width: 100%;
        box-sizing: border-box;
    }

    .project-body .project-name {
        font-size: 1.5rem;
        margin-bottom: 1rem;
        margin-top: 0;
    }

    .project-body .project-tags {
        flex-wrap: wrap;
        display: flex;
        margin: 0;

    }

    .project-body .project-tag {
        font-size: 0.7rem;
    }

    .project-body .project-description {
        font-size: 0.85em;
    }

    /* nav links */

    .links {
        flex-wrap: wrap;
        justify-content: space-around;
        align-items: center;
    }


    .one-link {
        height: 100%;
        display: flex;
        justify-content: center;
        box-sizing: border-box;
        flex-direction: row;
        justify-content: center;
        width: 30%;
        padding: 0.5rem 2rem;
    }

    .one-link a {
        width: 100%;
        height: 100%;
        flex-direction: row;
        justify-content: center;
        width: 100%;
    }

    .one-link:hover>a, .one-link:active>a {
        color: #3e3e3e;
    }

    .one-link .link-label {
        padding-top: 0.5rem;
        font-size: 0.9rem;
        text-transform: uppercase;
        font-weight: 600;
    }

    .one-link i {
        font-size: 1.6rem;
        display: none;
    }

    /* turned on*/

    .about-me {
        padding-top: 3vh;
        width: 90%;
        font-size: 0.3rem;
    }

    .about-switched-on .name-heading-wrapper #name-heading {
        font-size: 2rem;
    }

    .about-switched-on .name-heading-wrapper #name-subheading {
        font-size: 1.2rem;
    }

    .about-switched-on .name-heading-wrapper{
        padding-top: 5vh;
    }

    .about-switched-on .about-me {
        font-size: 0.8rem;
        transition: font-size 0.5s;
    }

    .section-title {
        width: initial;
        margin: 5vh auto;
    }


    /* contact page */

        #contact-info {
            font-size: 1.2rem;
            padding: 1.5rem 0;
        }

        #contact-section img {
            width: 30rem;
            margin-top: 1rem;
        }


    /* dark mode */
    #dark-mode-toggle {
        font-size: 1.5rem;
        width: 3rem;
        height: 3rem;
        z-index: 5;
    }

}

